--- a/Zeroconf/Zeroconf.csproj
+++ b/Zeroconf/Zeroconf.csproj
@@ -1,49 +1,20 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net8.0;netstandard2.0;net48;xamarinios10;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
-    <Copyright>© Claire Novotny 2016-2024</Copyright>
-    <PackageTags>zeroconf;bonjour;mdns;service;discovery;maui;xamarin;netstandard;universal</PackageTags>
+    <TargetFrameworks>net9.0</TargetFrameworks>
     <Authors>Claire Novotny</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/novotnyllc/Zeroconf</PackageProjectUrl>
-    <Description>Bonjour support for .NET 6, .NET 8, .NET Standard 2.0, .NET Framework, Xamarin, and UWP</Description>
+    <Description>Bonjour support for .NET 9</Description>
     <Product>Zeroconf</Product>
-    <GenerateDocumentationFile Condition=" '$(Configuration)' == 'Release' ">true</GenerateDocumentationFile>
-    <CodeAnalysisRuleSet>Zeroconf.ruleset</CodeAnalysisRuleSet>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
-    <LangVersion>latest</LangVersion>		
-    <ImplicitUsings>enable</ImplicitUsings>
-    <_mauiTfi>$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)'))</_mauiTfi>
-    <SupportedOSPlatformVersion Condition=" '$(_mauiTfi)' == 'ios'">12.2</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition=" '$(_mauiTfi)' == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" ('$(_mauiTfi)' == 'ios') or ('$(_mauiTfi)' == 'maccatalyst') ">
-    <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
-    <UseMaui>true</UseMaui>
-    <SingleProject>true</SingleProject>
-    <LangVersion>latest</LangVersion>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
+    <RunAnalyzers>false</RunAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Properties\Zeroconf.rd.xml" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.6.146" PrivateAssets="all" />
-    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
-  
-  <Target Name="AddCommitHashToAssemblyAttributes" BeforeTargets="GetAssemblyAttributes">
-    <ItemGroup>
-      <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute" Condition=" '$(SourceRevisionId)' != '' ">
-        <_Parameter1>CommitHash</_Parameter1>
-        <_Parameter2>$(SourceRevisionId)</_Parameter2>
-      </AssemblyAttribute>
-    </ItemGroup>
-  </Target>
-  
-  <ItemGroup Condition=" '$(UseMaui)' == 'true' " >
-    <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.100" />
-    <PackageReference Update="Microsoft.Maui.Controls" Version="8.0.100" />
+
+  <ItemGroup>
+    <PackageReference Include="R3" Version="1.3.0" />
   </ItemGroup>
-  
 </Project>
