--- a/Zeroconf/Zeroconf.csproj
+++ b/Zeroconf/Zeroconf.csproj
@@ -17,4 +17,8 @@
   <ItemGroup>
     <PackageReference Include="R3" Version="1.3.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+  </ItemGroup>
 </Project>
